--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -56,7 +56,7 @@
                 <label>@L["SalesURL1"]</label>
             </div>
             <div class="col-7">
-                <TextEdit @bind-Text="@editGroupBuyDto.EntryURL" />
+                <TextEdit @bind-Text="@EditGroupBuyDto.EntryURL" />
             </div>
            
             
@@ -67,7 +67,7 @@
                 <label>@L["SalesURL2"]</label>
             </div>
             <div class="col-7">
-                <TextEdit @bind-Text="@editGroupBuyDto.EntryURL2" />
+                <TextEdit @bind-Text="@EditGroupBuyDto.EntryURL2" />
             </div>
             </div>
             </div>
@@ -78,11 +78,11 @@
                 <label>@L["GroupBuyName"]</label>
             </div>
             <div class="col-9">
-                <TextEdit  MaxLength="@maxtextCount" @bind-Text="@editGroupBuyDto.GroupBuyName" />
+                <TextEdit  MaxLength="@MaxtextCount" @bind-Text="@EditGroupBuyDto.GroupBuyName" />
             </div>
             <div class="col-1">
                         <span>
-                            @(string.IsNullOrWhiteSpace(editGroupBuyDto.GroupBuyName) ? 60 : (maxtextCount - editGroupBuyDto.GroupBuyName.Count()))/@maxtextCount
+                            @(string.IsNullOrWhiteSpace(EditGroupBuyDto.GroupBuyName) ? 60 : (MaxtextCount - EditGroupBuyDto.GroupBuyName.Count()))/@MaxtextCount
                         </span>
                     </div>
             
@@ -92,11 +92,11 @@
                 <label>@L["Subject"]</label>
             </div>
             <div class="col-9">
-                <TextEdit  MaxLength="@maxtextCount" @bind-Text="@editGroupBuyDto.SubjectLine" />
+                <TextEdit  MaxLength="@MaxtextCount" @bind-Text="@EditGroupBuyDto.SubjectLine" />
             </div>
              <div class="col-1">
                         <span>
-                            @(string.IsNullOrWhiteSpace(editGroupBuyDto.SubjectLine) ? 60 : (maxtextCount - editGroupBuyDto.SubjectLine.Count()))/@maxtextCount
+                            @(string.IsNullOrWhiteSpace(EditGroupBuyDto.SubjectLine) ? 60 : (MaxtextCount - EditGroupBuyDto.SubjectLine.Count()))/@MaxtextCount
                         </span>
                     </div>
             </div>
@@ -105,11 +105,11 @@
                 <label>@L["GroupBuyShortName"]</label>
             </div>
             <div class="col-9">
-                <TextEdit  MaxLength="@maxtextCount" @bind-Text="@editGroupBuyDto.ShortName" />
+                <TextEdit  MaxLength="@MaxtextCount" @bind-Text="@EditGroupBuyDto.ShortName" />
             </div>
              <div class="col-1">
                         <span>
-                            @(string.IsNullOrWhiteSpace(editGroupBuyDto.ShortName) ? 60 : (maxtextCount - editGroupBuyDto.ShortName.Count()))/@maxtextCount
+                            @(string.IsNullOrWhiteSpace(EditGroupBuyDto.ShortName) ? 60 : (MaxtextCount - EditGroupBuyDto.ShortName.Count()))/@MaxtextCount
                         </span>
                     </div>
             </div>
@@ -167,7 +167,7 @@
                         </Field>
 
             </div>
-                @if(editGroupBuyDto.LogoURL!=null)
+                @if(EditGroupBuyDto.LogoURL!=null)
                 {
                     <div Class="col-12 row">
                         <div class="col-2"></div>
@@ -175,8 +175,8 @@
                             <div class="image-list-container">
                                
                                     <div class="image-container">
-                                        <Image class="blur-image" Source="@editGroupBuyDto.LogoURL" Text="Logo Image" Fluid />
-                                        <button class="delete-button" @onclick="() => DeleteLogoAsync(editGroupBuyDto.BannerURL)">
+                                        <Image class="blur-image" Source="@EditGroupBuyDto.LogoURL" Text="Logo Image" Fluid />
+                                        <button class="delete-button" @onclick="() => DeleteLogoAsync(EditGroupBuyDto.BannerURL)">
                                             <i class="fa fa-trash"></i>
                                         </button>
                                     </div>
@@ -239,7 +239,7 @@
                         </Field>
 
             </div>
-                @if(editGroupBuyDto.BannerURL!=null)
+                @if(EditGroupBuyDto.BannerURL!=null)
                 {
                     <div Class="col-12 row">
                         <div class="col-2"></div>
@@ -247,8 +247,8 @@
                             <div class="image-list-container">
                                
                                     <div class="image-container">
-                                        <Image class="blur-image" Source="@editGroupBuyDto.BannerURL" Text="Logo Image" Fluid />
-                                        <button class="delete-button" @onclick="() => DeleteBannerAsync(editGroupBuyDto.BannerURL)">
+                                        <Image class="blur-image" Source="@EditGroupBuyDto.BannerURL" Text="Logo Image" Fluid />
+                                        <button class="delete-button" @onclick="() => DeleteBannerAsync(EditGroupBuyDto.BannerURL)">
                                             <i class="fa fa-trash"></i>
                                         </button>
                                     </div>
@@ -342,12 +342,12 @@
                 <div class="col-4">
                  
     
-        <DateEdit  Class="form-control" @bind-Date=editGroupBuyDto.StartTime  Placeholder="@L["StartDate"].ToString()" TValue="DateTime?"/>
+        <DateEdit  Class="form-control" @bind-Date=EditGroupBuyDto.StartTime  Placeholder="@L["StartDate"].ToString()" TValue="DateTime?"/>
    
     </div>
                  <div class="col-4">
                  
-                     <DateEdit   Class="form-control"  @bind-Date=editGroupBuyDto.EndTime  Placeholder="@L["EndDate"].ToString()" TValue="DateTime?"  />
+                     <DateEdit   Class="form-control"  @bind-Date=EditGroupBuyDto.EndTime  Placeholder="@L["EndDate"].ToString()" TValue="DateTime?"  />
   
    
                  </div>
@@ -356,7 +356,7 @@
                 <div class="col-1">@L["Logistic"]</div>
                  <div class="col-2">@L["FreeShipping"]</div>
             
-                 <div class="col-4"> <Switch TValue="bool" @bind-Checked="@editGroupBuyDto.FreeShipping"></Switch></div>
+                 <div class="col-4"> <Switch TValue="bool" @bind-Checked="@EditGroupBuyDto.FreeShipping"></Switch></div>
             </div>
             <div class="col-12 row">
                 <div class="col-1"></div>
@@ -366,7 +366,7 @@
             <div class="col-8">
                
                             <div class="col-7 form-control"  style="background-color:white">
-          @foreach (var item in itemTags)
+          @foreach (var item in ItemTags)
                             {
                                 <Badge class="item-tags" CloseClicked="@(() => HandleItemTagDelete(item))">@item</Badge>
                             }
@@ -386,26 +386,26 @@
                 <div class="col-1"></div>
                  <div class="col-2">@L["AllowShipToOuterIsland"]</div>
             
-                 <div class="col-4"> <Switch TValue="bool" @bind-Checked="@editGroupBuyDto.allowShipToOuterTaiwan"></Switch></div>
+                 <div class="col-4"> <Switch TValue="bool" @bind-Checked="@EditGroupBuyDto.AllowShipToOuterTaiwan"></Switch></div>
             </div>
                 <div class=" col-12 row">
                 <div class="col-1"></div>
                  <div class="col-2">@L["AllowShipToOverSea"]</div>
             
-                 <div class="col-4"> <Switch TValue="bool" @bind-Checked="@editGroupBuyDto.allowShipOversea"></Switch></div>
+                 <div class="col-4"> <Switch TValue="bool" @bind-Checked="@EditGroupBuyDto.AllowShipOversea"></Switch></div>
             </div>
                <div class=" col-12 row">
                    <div class="col-1"></div>
                 <div class="col-2">@L["ExpectDeliveryDate"]</div>
-                <div class="col-4"><DateEdit TValue="DateTime?" Class="form-control" @bind-Date=editGroupBuyDto.ExpectShippingDateTo  Placeholder="@L["StartDate"].ToString()" /></div>
-                 <div class="col-4"><DateEdit TValue="DateTime?"  Class="form-control" @bind-Date=editGroupBuyDto.ExpectShippingDateFrom  Placeholder="@L["EndDate"].ToString()" /></div>
+                <div class="col-4"><DateEdit TValue="DateTime?" Class="form-control" @bind-Date=EditGroupBuyDto.ExpectShippingDateTo  Placeholder="@L["StartDate"].ToString()" /></div>
+                 <div class="col-4"><DateEdit TValue="DateTime?"  Class="form-control" @bind-Date=EditGroupBuyDto.ExpectShippingDateFrom  Placeholder="@L["EndDate"].ToString()" /></div>
             </div>
           
               <div class="col-12 row">
                 <div class="col-1">@L["GateWay"]</div>
                  <div class="col-2">@L["PaymentMethod"]</div>
             
-                 <div class="col-4">  <Radio TValue="bool" Group="Payment" Value=editGroupBuyDto.IsDefaultPaymentGateWay>
+                 <div class="col-4">  <Radio TValue="bool" Group="Payment" Value=EditGroupBuyDto.IsDefaultPaymentGateWay>
         @L["DefaultPaymentGateWay"]
     </Radio>
        </div>
@@ -414,10 +414,10 @@
                 <div class="col-1"></div>
                  <div class="col-2"></div>
             
-                 <div class="col-1">    <Radio TValue="bool" Group="Payment" Value="@paymentMethodCheck" > </Radio></div>
+                 <div class="col-1">    <Radio TValue="bool" Group="Payment" Value="@PaymentMethodCheck" > </Radio></div>
                  <div class="col-7">
                      <div class="col-7 form-control"  style="background-color:white">
-               @foreach (var item in paymentMethodTags)
+               @foreach (var item in PaymentMethodTags)
                             {
                                 <Badge class="item-tags" CloseClicked="@(() => HandlePaymentTagDelete(item))">@item</Badge>
                             }
@@ -436,26 +436,26 @@
                 <div class="col-1">@L["Invoice"]</div>
                  <div class="col-2">@L["IssueInvoice"]</div>
             
-                 <div class="col-4"> <Switch TValue="bool" @bind-Checked="@editGroupBuyDto.issueInvoice"></Switch></div>
+                 <div class="col-4"> <Switch TValue="bool" @bind-Checked="@EditGroupBuyDto.IssueInvoice"></Switch></div>
             </div>
            <div class=" col-12 row">
                 <div class="col-1"></div>
                  <div class="col-2 form-label">@L["AutoIssueTriplicateInvoice"]</div>
             
-                 <div class="col-4"> <Switch TValue="bool" @bind-Checked="@editGroupBuyDto.AutoIssueTriplicateInvoice"></Switch></div>
+                 <div class="col-4"> <Switch TValue="bool" @bind-Checked="@EditGroupBuyDto.AutoIssueTriplicateInvoice"></Switch></div>
             </div>
              <div class=" col-12 row">
                 <div class="col-1"></div>
                  <div class="col-2 form-label">@L["InvoiceComment"]</div>
             
-                 <div class="col-8"> <InputTextArea class="form-control"   maxlength="200" @bind-Value="@editGroupBuyDto.InvoiceNote"></InputTextArea></div>
+                 <div class="col-8"> <InputTextArea class="form-control"   maxlength="200" @bind-Value="@EditGroupBuyDto.InvoiceNote"></InputTextArea></div>
             </div>
             <Divider></Divider>
              <div class=" col-12 row">
                 <div class="col-1 mx-1">@L["AdvanceSetting"]</div>
                  <div class="col-2 form-label">@L["HideCredention"]</div>
             
-                 <div class="col-4"> <Switch TValue="bool" @bind-Checked="@editGroupBuyDto.ProtectPrivacyData"></Switch></div>
+                 <div class="col-4"> <Switch TValue="bool" @bind-Checked="@EditGroupBuyDto.ProtectPrivacyData"></Switch></div>
             </div>
                 <div class=" col-12 row">
            <div class="col-1"></div>
@@ -463,7 +463,7 @@
                 <label>@L["InviteCode"]</label>
             </div>
             <div class="col-5">
-                <TextEdit  @bind-Text="@editGroupBuyDto.InviteCode" />
+                <TextEdit  @bind-Text="@EditGroupBuyDto.InviteCode" />
             </div>
            
             
@@ -474,7 +474,7 @@
                 <label>@L["ProfitShare"]</label>
             </div>
             <div class="col-5">
-                <InputNumber class="form-control"   @bind-Value="@editGroupBuyDto.ProfitShare" />
+                <InputNumber class="form-control"   @bind-Value="@EditGroupBuyDto.ProfitShare" />
             </div>
             </div>
              <div class=" col-12 row">
@@ -483,7 +483,7 @@
                 <label>@L["FaceBookPixelID"]</label>
             </div>
             <div class="col-5">
-                <InputNumber class="form-control"   @bind-Value="@editGroupBuyDto.MetaPixelNo" />
+                <InputNumber class="form-control"   @bind-Value="@EditGroupBuyDto.MetaPixelNo" />
             </div>
             </div>
              <div class=" col-12 row">
@@ -492,7 +492,7 @@
                 <label>@L["FaceBookID"]</label>
             </div>
             <div class="col-5">
-                <TextEdit    @bind-Text="@editGroupBuyDto.FBID" />
+                <TextEdit    @bind-Text="@EditGroupBuyDto.FBID" />
             </div>
             </div>
              <div class=" col-12 row">
@@ -501,7 +501,7 @@
                 <label>@L["IGID"]</label>
             </div>
             <div class="col-5">
-                <TextEdit  @bind-Text="@editGroupBuyDto.IGID" />
+                <TextEdit  @bind-Text="@EditGroupBuyDto.IGID" />
             </div>
             </div>
              <div class=" col-12 row">
@@ -510,7 +510,7 @@
                 <label>@L["LINEID"]</label>
             </div>
             <div class="col-5">
-                <TextEdit  @bind-Text="@editGroupBuyDto.LineID" />
+                <TextEdit  @bind-Text="@EditGroupBuyDto.LineID" />
             </div>
             </div>
              <div class=" col-12 row">
@@ -519,7 +519,7 @@
                 <label>@L["GAID"]</label>
             </div>
             <div class="col-5">
-                <TextEdit  @bind-Text="@editGroupBuyDto.GAID" />
+                <TextEdit  @bind-Text="@EditGroupBuyDto.GAID" />
             </div>
             </div>
              <div class=" col-12 row">
@@ -528,7 +528,7 @@
                 <label>@L["GTM"]</label>
             </div>
             <div class="col-5">
-                <TextEdit  @bind-Text="@editGroupBuyDto.GTM" />
+                <TextEdit  @bind-Text="@EditGroupBuyDto.GTM" />
             </div>
             </div>
     <Divider></Divider>
@@ -553,7 +553,7 @@
               
             </div>
             </div>
-            @foreach (var module in collapseItem)
+            @foreach (var module in CollapseItem)
                 {<div class=" col-12 row">
                     <div class="col-2"></div>
                     <div class="col-8">
@@ -697,7 +697,7 @@
     <div class="col-9">
         <div class="col-12">
             <FieldLabel></FieldLabel>
-            <TextEdit Placeholder="@L["GroupBuyCondition"]" @bind-Text="editGroupBuyDto.GroupBuyCondition" MaxLength="60"  />
+            <TextEdit Placeholder="@L["GroupBuyCondition"]" @bind-Text="EditGroupBuyDto.GroupBuyCondition" MaxLength="60"  />
         </div>
         <div class=" col-12">
             <Blazored.TextEditor.BlazoredTextEditor @ref="@quillHtml">
@@ -735,6 +735,7 @@
                     </span>
                 </ToolbarContent>
             </Blazored.TextEditor.BlazoredTextEditor>
+       
         </div>
     </div>
     <div class="col-1">
@@ -751,7 +752,7 @@
      <div class="col-9">
          <div class="col-12">
              <fieldLabel></fieldLabel>
-             <TextEdit Placeholder="@L["CustomerInformation"]" @bind-Text="@editGroupBuyDto.CustomerInformation" MaxLength="60"  />
+             <TextEdit Placeholder="@L["CustomerInformation"]" @bind-Text="@EditGroupBuyDto.CustomerInformation" MaxLength="60"  />
          </div>
          <div class=" col-12">
              <Blazored.TextEditor.BlazoredTextEditor @ref="@quillHtml">
@@ -805,7 +806,7 @@
      <div class="col-9">
          <div class="col-12">
              <fieldLabel></fieldLabel>
-             <TextEdit Placeholder="@L["ExchangePolicy"]" @bind-Text="@editGroupBuyDto.ExchangePolicy" MaxLength="60" ShowCount />
+             <TextEdit Placeholder="@L["ExchangePolicy"]" @bind-Text="@EditGroupBuyDto.ExchangePolicy" MaxLength="60" ShowCount />
          </div>
          <div class=" col-12">
              <Blazored.TextEditor.BlazoredTextEditor  @ref="@quillHtml">
@@ -908,7 +909,7 @@
      <div class="row mb-3"></div>
 
         <div style="text-align: center; margin-top:5px ;">
-            <Button Danger Type="@ButtonType.Button" Style="margin-right:5px">@L["Cancel"]</Button>
+            <Button Danger Type="@ButtonType.Button" Style="margin-right:5px" Clicked="CloseGroupBuyEdit">@L["Cancel"]</Button>
             <Button Type="@ButtonType.Button" class="btn btn-primary me-1" Clicked="CreateEntityAsync">@L["Save"]</Button>
             <Button Type="@ButtonType.Button" Style="margin-right:5px; background-color:skyblue">@L["Preview"]</Button>
 
@@ -935,13 +936,13 @@
     private void HandleClick(int i)
     {
         int selectedIndex = i;
-        if (collapseItem.Where(x => x.Index == i).FirstOrDefault().ItemDetails.Count <= 3)
+        if (CollapseItem.Where(x => x.Index == i).FirstOrDefault().ItemDetails.Count <= 3)
         {
             ProductPictureItem item = new ProductPictureItem();
             // item.ImageDetail = productPicture;
             item.ItemDescription = productDescription;
 
-            collapseItem.Where(x => x.Index == i).FirstOrDefault().ItemDetails.Add(item);
+            CollapseItem.Where(x => x.Index == i).FirstOrDefault().ItemDetails.Add(item);
             productDescription="";
             // productPicture = new UploadFileItem();
         }
@@ -961,7 +962,7 @@
     }
        private void RemoveProductItem(ProductPictureItem item,int index)
     {
-    collapseItem.Where(x=>x.Index==index).FirstOrDefault().ItemDetails.Remove(item);
+    CollapseItem.Where(x=>x.Index==index).FirstOrDefault().ItemDetails.Remove(item);
     }
     }
 
