--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyList.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyList.razor
@@ -30,7 +30,8 @@
                   ReadData="UpdateGroupBuyList"
                   TotalItems="Total"
                   ShowPager="true"
-                  PageSize="_pageSize">
+                  PageSize="_pageSize"
+  RowDoubleClicked="OnEditItem">
             <DataGridColumns>
              @*    <DataGridColumn TItem="GroupBuyDto" Caption="@L["Select"]">
                     <DisplayTemplate>
@@ -52,10 +53,10 @@
                                 @L["Actions"]
                             </DropdownToggle>
                             <DropdownMenu>
-                              
+                              @* 
                                     <DropdownItem Clicked="() => startEdit(context.Id)">
                                         @L["Edit"]
-                                    </DropdownItem>
+                                    </DropdownItem> *@
                               
                              
                             </DropdownMenu>
@@ -73,10 +74,14 @@
     {
         NavigationManager.NavigateTo("/GroupBuyManagement/GroupBuyList/New");
     }
-    public void startEdit(Guid Id)
-    {
-         NavigationManager.NavigateTo("/GroupBuyManagement/GroupBuyList/Edit/"+Id);
+     
     
-    }
+     public void OnEditItem(DataGridRowMouseEventArgs<GroupBuyDto> e)
+        {
+            var id = e.Item.Id;
+            NavigationManager.NavigateTo("/GroupBuyManagement/GroupBuyList/Edit/" + id);
+
+        }
+   
 }
 
